Translate the mobile app

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -8,7 +8,7 @@
         "home": "Αρχική",
         "profile": "Προφίλ",
         "settings": "Ρυθμίσεις",
-        "notFound": "Ούτε και σε αυτή την περίπτωση",
+        "notFound": "Δεν βρέθηκε",
         "bookings": "Κρατήσεις",
         "map": "Χάρτης",
         "explore": "Εξερεύνηση",
@@ -23,9 +23,267 @@
         "loading": "Φόρτωση...",
         "error": "Σφάλμα",
         "tryAgain": "Δοκιμάστε ξανά",
-        "clearAll": "Καθαρισμός όλων"
+        "clearAll": "Καθαρισμός όλων",
+        "ok": "Εντάξει",
+        "yes": "Ναι",
+        "no": "Όχι",
+        "continue": "Συνέχεια",
+        "back": "Πίσω",
+        "next": "Επόμενο",
+        "done": "Ολοκληρώθηκε",
+        "close": "Κλείσιμο",
+        "confirm": "Επιβεβαίωση",
+        "remove": "Αφαίρεση",
+        "update": "Ενημέρωση",
+        "submit": "Υποβολή",
+        "apply": "Εφαρμογή",
+        "reset": "Επαναφορά",
+        "today": "Σήμερα"
+    },
+    "app": {
+        "connectionFailed": "Αποτυχία Σύνδεσης",
+        "connectionFailedMessage": "Αδυναμία σύνδεσης με τους διακομιστές του KymaClub.\n\nΕλέγξτε τη σύνδεσή σας στο διαδίκτυο και δοκιμάστε ξανά.",
+        "retry": "Επανάληψη"
+    },
+    "errors": {
+        "somethingWentWrong": "Κάτι πήγε στραβά",
+        "unexpectedError": "Προέκυψε ένα απροσδόκητο σφάλμα. Ζητούμε συγγνώμη για την ταλαιπωρία.",
+        "tryAgain": "Δοκιμάστε Ξανά",
+        "restartApp": "Επανεκκίνηση Εφαρμογής",
+        "showErrorDetails": "Εμφάνιση Λεπτομερειών Σφάλματος (Λειτουργία Προγραμματιστή)",
+        "imageNotApproved": "Η Εικόνα Δεν Εγκρίθηκε",
+        "uploadFailed": "Η Μεταφόρτωση Απέτυχε",
+        "failedToUploadPhoto": "Αποτυχία μεταφόρτωσης φωτογραφίας. Δοκιμάστε ξανά.",
+        "failedToUploadImage": "Αποτυχία μεταφόρτωσης εικόνας. Δοκιμάστε ξανά.",
+        "failedToRemoveImage": "Αποτυχία αφαίρεσης εικόνας προφίλ",
+        "uploadNewImage": "Μεταφόρτωση Νέας Εικόνας",
+        "noStorageId": "Δεν επιστράφηκε αναγνωριστικό αποθήκευσης από τη μεταφόρτωση",
+        "error": "Σφάλμα",
+        "unableToStartCheckout": "Αδυναμία έναρξης checkout. Παρακαλώ δοκιμάστε ξανά αργότερα."
+    },
+    "auth": {
+        "landing": {
+            "title": "KymaClub",
+            "subtitle": "Η premium εμπειρία στην παραλία σας",
+            "feature1": "1. Επιλέξτε τα credits σας.",
+            "feature2": "2. Διαλέξτε τις υπερδυνάμεις σας!",
+            "feature3": "3. Περιηγηθείτε & Κλείστε τη θέση σας!",
+            "createAccount": "Δημιουργία Λογαριασμού",
+            "signIn": "Σύνδεση",
+            "footer": "Επί του παρόντος εξυπηρετούμε την Αθήνα και τις γύρω περιοχές"
+        },
+        "signOut": "Αποσύνδεση",
+        "signOutConfirm": "Είστε σίγουροι ότι θέλετε να αποσυνδεθείτε;",
+        "signIn": "Σύνδεση",
+        "createAccount": "Δημιουργία Λογαριασμού",
+        "welcomeBack": "Καλώς ήρθατε πίσω!",
+        "getStarted": "Ας ξεκινήσουμε"
+    },
+    "bookings": {
+        "title": "Κρατήσεις",
+        "upcoming": "Προσεχείς",
+        "past": "Παρελθόντα",
+        "noUpcomingBookings": "Δεν υπάρχουν προσεχείς κρατήσεις",
+        "noPastBookings": "Δεν υπάρχουν προηγούμενες κρατήσεις",
+        "exploreClasses": "Εξερευνήστε τα μαθήματα για να κλείσετε την πρώτη σας συνεδρία!",
+        "viewClass": "Προβολή Μαθήματος",
+        "viewTicket": "Προβολή Εισιτηρίου",
+        "cancelBooking": "Ακύρωση Κράτησης",
+        "status": {
+            "confirmed": "Επιβεβαιωμένο",
+            "checkedIn": "Παρουσία Καταγεγραμμένη",
+            "attended": "Συμμετείχε",
+            "waitlisted": "Σε Λίστα Αναμονής",
+            "cancelledByYou": "Ακυρώθηκε από εσάς",
+            "cancelledByStudio": "Ακυρώθηκε από το στούντιο",
+            "noShow": "Δεν Παρουσιάστηκε",
+            "pending": "Εκκρεμεί"
+        }
+    },
+    "settings": {
+        "title": "Ρυθμίσεις",
+        "account": {
+            "title": "Λογαριασμός",
+            "appSettings": "Ρυθμίσεις Εφαρμογής",
+            "appLanguage": "Γλώσσα Εφαρμογής",
+            "change": "Αλλαγή",
+            "accountSettings": "Ρυθμίσεις Λογαριασμού",
+            "accountSettingsSubtitle": "Απόρρητο, ασφάλεια, δεδομένα",
+            "privacySettings": "Ρυθμίσεις Απορρήτου",
+            "privacyDescription": "Διαχειριστείτε τις προτιμήσεις απορρήτου σας",
+            "dataStorage": "Δεδομένα & Αποθήκευση",
+            "dataDescription": "Διαχειριστείτε τα δεδομένα και την αποθήκευση σας",
+            "deleteAccount": "Διαγραφή Λογαριασμού",
+            "deleteDescription": "Μόνιμη διαγραφή του λογαριασμού σας",
+            "comingSoon": "Η διαχείριση λογαριασμού έρχεται σύντομα"
+        },
+        "language": {
+            "title": "Γλώσσα Εφαρμογής",
+            "description": "Επιλέξτε την γλώσσα της εφαρμογής.",
+            "error": "Σφάλμα",
+            "failedToChange": "Αποτυχία αλλαγής γλώσσας. Δοκιμάστε ξανά.",
+            "changesImmediate": "Οι αλλαγές γλώσσας θα εφαρμοστούν αμέσως"
+        },
+        "profile": {
+            "title": "Προφίλ",
+            "profilePhoto": "Φωτογραφία Προφίλ",
+            "chooseOption": "Επιλέξτε μια επιλογή",
+            "takePhoto": "Λήψη Φωτογραφίας",
+            "chooseFromLibrary": "Επιλογή από Βιβλιοθήκη",
+            "removePhoto": "Αφαίρεση Φωτογραφίας",
+            "editProfile": "Επεξεργασία Προφίλ",
+            "yourProfile": "Το Προφίλ σας"
+        },
+        "notifications": {
+            "title": "Ειδοποιήσεις",
+            "description": "Διαχειριστείτε τις προτιμήσεις ειδοποιήσεών σας",
+            "notificationsSubtitle": "Push ειδοποιήσεις, προτιμήσεις email",
+            "pushNotifications": "Ειδοποιήσεις Push",
+            "emailNotifications": "Ειδοποιήσεις Email",
+            "smsNotifications": "Ειδοποιήσεις SMS"
+        },
+        "credits": {
+            "title": "Credits",
+            "yourBalance": "Το Υπόλοιπό σας",
+            "buyCredits": "Αγορά Credits",
+            "creditsExpiring": "Credits που Λήγουν",
+            "viewHistory": "Προβολή Ιστορικού"
+        },
+        "subscription": {
+            "title": "Συνδρομή",
+            "active": "Ενεργή",
+            "inactive": "Δεν υπάρχει ενεργή συνδρομή",
+            "manage": "Διαχείριση Συνδρομής",
+            "cancel": "Ακύρωση Συνδρομής",
+            "startSubscription": "Έναρξη συνδρομής"
+        },
+        "statistics": {
+            "totalBookings": "Συνολικές Κρατήσεις",
+            "completedClasses": "Ολοκληρωμένα Μαθήματα",
+            "memberSince": "Μέλος από"
+        }
+    },
+    "subscription": {
+        "title": "Συνδρομή",
+        "monthly": "Μηνιαία",
+        "monthlySubscription": "Μηνιαία Συνδρομή",
+        "chooseYourPlan": "Επιλέξτε το Πλάνο σας",
+        "whySubscribe": "Γιατί να κάνετε συνδρομή;",
+        "benefits": "• Εξοικονομήστε 5-10% σε σύγκριση με εφάπαξ αγορές\n• Οι credits προστίθενται στον λογαριασμό σας κάθε μήνα\n• Χρησιμοποιήστε credits για κρατήσεις σε οποιοδήποτε στούντιο-συνεργάτη\n• Οι αχρησιμοποίητες credits μεταφέρονται για έως και 3 μήνες\n• Ακυρώστε ανά πάσα στιγμή - δεν απαιτείται δέσμευση",
+        "selectPlan": "Επιλογή Πλάνου",
+        "subscribe": "Εγγραφή",
+        "cancelSubscription": "Ακύρωση Συνδρομής",
+        "currentPlan": "Τρέχον Πλάνο",
+        "noPlan": "Δεν υπάρχει ενεργή συνδρομή",
+        "perMonth": "ανά μήνα",
+        "billedMonthly": "Χρέωση μηνιαία",
+        "cancelAnytime": "Ακύρωση ανά πάσα στιγμή",
+        "updateSubscription": "Ενημέρωση Συνδρομής",
+        "startSubscription": "Έναρξη Συνδρομής",
+        "reactivateSubscription": "Επανενεργοποίηση Συνδρομής",
+        "updatePlan": "Ενημέρωση Πλάνου",
+        "startAndPay": "Έναρξη & Πληρωμή",
+        "updating": "Ενημέρωση...",
+        "starting": "Έναρξη...",
+        "keepSubscription": "Διατήρηση Συνδρομής",
+        "subscriptionUpdated": "Η Συνδρομή Ενημερώθηκε!",
+        "subscriptionCancelled": "Η Συνδρομή Ακυρώθηκε",
+        "subscriptionReactivated": "Η Συνδρομή Επανενεργοποιήθηκε!",
+        "cancelSuccess": "Η συνδρομή σας θα λήξει στο τέλος της τρέχουσας περιόδου χρέωσης.",
+        "reenable": "Επανενεργοποίηση",
+        "errorUpdate": "Αποτυχία ενημέρωσης συνδρομής. {{message}}",
+        "errorStart": "Αποτυχία έναρξης συνδρομής. {{message}}",
+        "errorCancel": "Αποτυχία ακύρωσης συνδρομής. Παρακαλώ δοκιμάστε ξανά.",
+        "errorReactivate": "Αποτυχία επανενεργοποίησης συνδρομής. {{message}}",
+        "update": "Ενημέρωση",
+        "active": "Ενεργή",
+        "canceling": "Ακύρωση",
+        "endsOn": "Λήγει {{date}}",
+        "renewsOn": "Ανανεώνεται {{date}}",
+        "currentSubscription": "Τρέχουσα Συνδρομή",
+        "savingsUpTo": "Έκπτωση έως {{discount}}%",
+        "updateConfirm": "Ενημέρωση σε {{credits}} credits/μήνα για {{price}}/μήνα;\n\nΟι αλλαγές θα ισχύσουν στις {{date}}. Δεν θα χρεωθείτε τώρα.",
+        "startConfirm": "Έναρξη συνδρομής με {{credits}} credits/μήνα για {{price}}/μήνα;\n\nΘα χρεωθείτε τώρα και θα λάβετε {{credits}} credits αμέσως.",
+        "cancelConfirm": "Είστε σίγουροι ότι θέλετε να ακυρώσετε τη συνδρομή σας; Θα συνεχίσετε να έχετε πρόσβαση μέχρι το τέλος της τρέχουσας περιόδου χρέωσής σας.",
+        "reactivateExpiredConfirm": "Έναρξη νέας συνδρομής με {{credits}} credits/μήνα για {{price}}/μήνα;\n\nΘα χρεωθείτε {{price}} τώρα και θα λάβετε {{credits}} credits αμέσως.",
+        "reactivateActiveConfirm": "Επανενεργοποίηση συνδρομής με {{credits}} credits/μήνα;\n\nΔεν θα χρεωθείτε τώρα. Η συνδρομή σας θα συνεχιστεί και θα χρεωθείτε {{price}} στις {{date}}.",
+        "creditsPerMonth": "{{credits}} credits/μήνα",
+        "nextBilling": "Επόμενη χρέωση: {{date}}",
+        "savePercent": "Έκπτωση {{discount}}%",
+        "standardRate": "Τυπική τιμή",
+        "paused": "Σε παύση",
+        "inactive": "Ανενεργή",
+        "resume": "Συνέχιση"
+    },
+    "credits": {
+        "title": "Credits",
+        "balance": "Υπόλοιπο",
+        "history": "Ιστορικό Credits",
+        "noHistory": "Δεν υπάρχει ιστορικό credits",
+        "buyCredits": "Αγορά Credits",
+        "manageCredits": "Διαχείριση Credits",
+        "buyNow": "Αγορά τώρα",
+        "processing": "Επεξεργασία...",
+        "topUpCredits": "Συμπληρώστε το υπόλοιπο credits σας αμέσως",
+        "creditsValid": "Οι credits ισχύουν για 3 μήνες μετά την έκδοση. Ιδανικά για περιστασιακές κρατήσεις.",
+        "quickBuy": "Γρήγορη αγορά",
+        "quickBuySubtitle": "Αποκτήστε credits αμέσως",
+        "buyCreditsButton": "Αγορά credits",
+        "oneTimePurchase": "Εφάπαξ Αγορά",
+        "selectAmount": "Επιλέξτε Ποσό",
+        "creditsAmount": "{{credits}} credits",
+        "purchase": "Αγορά",
+        "expiresIn": "Λήγει σε {{days}} ημέρες",
+        "expired": "Έληξε",
+        "purchaseDescription": "Αγοράστε credits αν τελειώνουν ή δεν θέλετε να ξεκινήσετε συνδρομή. Οι credits θα λήξουν 90 ημέρες μετά την αγορά.",
+        "currentBalance": "Τρέχον Υπόλοιπο",
+        "creditsAvailable": "διαθέσιμες credits",
+        "availableCreditPacks": "Διαθέσιμα Πακέτα Credits",
+        "choosePackMessage": "Επιλέξτε το πακέτο που ταιριάζει στις ανάγκες σας",
+        "purchaseCredits": "Αγορά Credits",
+        "purchaseConfirm": "Αγορά {{credits}} credits για {{price}};",
+        "errorPurchase": "Αποτυχία έναρξης αγοράς. Παρακαλώ δοκιμάστε ξανά.",
+        "recommended": "Προτεινόμενο",
+        "perCredit": "ανά credit",
+        "savePercent": "Έκπτωση {{discount}}%",
+        "standardRate": "Τυπική τιμή"
+    },
+    "classes": {
+        "title": "Μαθήματα",
+        "classDetails": "Λεπτομέρειες Μαθήματος",
+        "instructor": "Εκπαιδευτής",
+        "duration": "Διάρκεια",
+        "capacity": "Χωρητικότητα",
+        "price": "Τιμή",
+        "book": "Κράτηση",
+        "bookNow": "Κράτηση Τώρα",
+        "fullyBooked": "Πλήρως Κατειλημμένο",
+        "joinWaitlist": "Εγγραφή σε Λίστα Αναμονής",
+        "removeFromWaitlist": "Αφαίρεση από Λίστα Αναμονής",
+        "alreadyBooked": "Ήδη Κρατημένο",
+        "bookingWindow": "Παράθυρο Κράτησης",
+        "opensAt": "Ανοίγει {{time}}",
+        "closesAt": "Κλείνει {{time}}",
+        "noClasses": "Δεν υπάρχουν διαθέσιμα μαθήματα",
+        "upcomingClasses": "Προσεχή Μαθήματα",
+        "about": "Σχετικά με αυτό το μάθημα",
+        "whatToBring": "Τι να φέρετε",
+        "cancellationPolicy": "Πολιτική Ακύρωσης"
+    },
+    "venues": {
+        "title": "Χώροι",
+        "venueDetails": "Λεπτομέρειες Χώρου",
+        "location": "Τοποθεσία",
+        "amenities": "Ανέσεις",
+        "description": "Περιγραφή",
+        "classes": "Μαθήματα",
+        "reviews": "Κριτικές",
+        "noVenues": "Δεν βρέθηκαν χώροι",
+        "viewSchedule": "Προβολή Προγράμματος",
+        "getDirections": "Λήψη Οδηγιών"
     },
     "explore": {
+        "title": "Εξερεύνηση",
         "businesses": "Επιχειρήσεις",
         "classes": "Μαθήματα",
         "nearYou": "Κοντά σας",
@@ -37,14 +295,21 @@
         "closedNow": "Κλειστό τώρα",
         "rating": "{{rating}} αστέρια",
         "reviews": "{{count}} κριτικές",
+        "review": "{{count}} κριτική",
         "startsAt": "Ξεκινά από {{price}}",
         "duration": "{{minutes}} λεπτά",
-        "spotsLeft": "{{count}} θέσεις διαθέσιμες",
+        "spotsLeft": "{{count}} θέσεις",
+        "spotLeft": "{{count}} θέση διαθέσιμη",
         "soldOut": "Εξαντλήθηκε",
         "bookingsDisabled": "Κρατήσεις Απενεργοποιημένες",
         "registrationsClosed": "Οι Εγγραφές Έκλεισαν",
         "bookingsNotYetOpen": "Οι Κρατήσεις Δεν Έχουν Ανοίξει Ακόμα",
-        "bookingsClosed": "Οι Κρατήσεις Έκλεισαν",
+        "bookingsClosed": "Έκλεισε",
+        "closesIn": "Κλείνει σε {{time}}",
+        "opensIn": "Ανοίγει σε {{time}}",
+        "timeUnitDays": "μ",
+        "timeUnitHours": "ω",
+        "timeUnitMinutes": "λ",
         "noBusinesses": "Δεν βρέθηκαν επιχειρήσεις κοντά",
         "noClasses": "Δεν βρέθηκαν μαθήματα",
         "searchPlaceholder": "Αναζήτηση επιχειρήσεων ή μαθημάτων...",
@@ -52,6 +317,135 @@
         "applyFilters": "Εφαρμογή φίλτρων ({{count}})",
         "applyFiltersNoCount": "Εφαρμογή φίλτρων",
         "distanceWithin": "Έως {{distance}} χλμ",
-        "distanceAny": "Οποιαδήποτε απόσταση"
+        "distanceAny": "Οποιαδήποτε απόσταση",
+        "allCategories": "Όλες οι Κατηγορίες",
+        "clearFilters": "Καθαρισμός Φίλτρων"
+    },
+    "reviews": {
+        "title": "Κριτικές",
+        "writeReview": "Γράψτε μια Κριτική",
+        "yourReview": "Η Κριτική σας",
+        "rating": "Αξιολόγηση",
+        "tapToRate": "Πατήστε για αξιολόγηση",
+        "comment": "Σχόλιο",
+        "commentPlaceholder": "Τι σας άρεσε σε αυτόν τον χώρο; Τι θα μπορούσε να βελτιωθεί;",
+        "tellUsExperience": "Πείτε μας για την εμπειρία σας (προαιρετικό)",
+        "characterCount": "{{current}}/{{max}}",
+        "guidelines": "Οδηγίες Κριτικών",
+        "guidelinesText": "• Να είστε ειλικρινείς και χρήσιμοι σε άλλους χρήστες\n• Εστιάστε στην εμπειρία σας στον χώρο\n• Να είστε ευγενικοί και εποικοδομητικοί\n• Αποφύγετε προσωπικές επιθέσεις ή ακατάλληλο περιεχόμενο",
+        "submitReview": "Υποβολή Κριτικής",
+        "submitting": "Υποβολή...",
+        "thankYou": "Ευχαριστούμε για την κριτική σας!",
+        "noReviews": "Δεν υπάρχουν ακόμη κριτικές",
+        "beTheFirst": "Γίνετε ο πρώτος που θα αξιολογήσει!",
+        "helpful": "Χρήσιμο",
+        "notHelpful": "Όχι χρήσιμο",
+        "readMore": "Διαβάστε περισσότερα",
+        "readLess": "Διαβάστε λιγότερα"
+    },
+    "map": {
+        "title": "Χάρτης",
+        "myLocation": "Η Τοποθεσία μου",
+        "searchThisArea": "Αναζήτηση σε αυτήν την περιοχή",
+        "nearbyClasses": "Κοντινά Μαθήματα"
+    },
+    "profile": {
+        "title": "Προφίλ",
+        "editProfile": "Επεξεργασία Προφίλ",
+        "yourName": "Το Όνομά σας",
+        "email": "Email",
+        "phone": "Τηλέφωνο",
+        "preferences": "Προτιμήσεις",
+        "statistics": "Στατιστικά",
+        "totalBookings": "Συνολικές Κρατήσεις",
+        "completedClasses": "Ολοκληρωμένα Μαθήματα",
+        "memberSince": "Μέλος από"
+    },
+    "payment": {
+        "success": "Επιτυχής Πληρωμή!",
+        "successMessage": "Η πληρωμή σας επεξεργάστηκε επιτυχώς.",
+        "cancelled": "Η Πληρωμή Ακυρώθηκε",
+        "cancelledMessage": "Η πληρωμή σας ακυρώθηκε.",
+        "returnToApp": "Επιστροφή στην Εφαρμογή",
+        "viewCredits": "Προβολή Credits",
+        "viewSubscription": "Προβολή Συνδρομής"
+    },
+    "news": {
+        "title": "Νέα",
+        "updates": "Ενημερώσεις",
+        "noNews": "Δεν υπάρχουν διαθέσιμα νέα",
+        "readMore": "Διαβάστε περισσότερα",
+        "loading": "Φόρτωση νέων...",
+        "welcomeBanner": {
+            "title": "Καλώς ήρθατε! 🎉",
+            "subtitle": "Χαιρόμαστε που είστε μαζί μας! Προσθέσαμε 10 credits στον λογαριασμό σας για να ξεκινήσετε. Κοιτάξτε γύρω, περιηγηθείτε στις διαφορετικές επιχειρήσεις και κρατήστε οποιαδήποτε τάξη σας αρέσει!",
+            "exploreButton": "Βρείτε μάθημα"
+        },
+        "noUpcomingClasses": {
+            "title": "Δεν έχετε κρατήσεις",
+            "exploreButton": "Βρείτε μάθημα"
+        },
+        "yourSchedule": "Το Πρόγραμμά σας",
+        "happeningToday": "Συμβαίνουν σήμερα",
+        "bestOffers": "Καλύτερες Προσφορές",
+        "newStudios": "Νέα στούντιο",
+        "withInstructor": "με {{instructor}}",
+        "tomorrow": "Αύριο",
+        "class": "Τάξη",
+        "instructor": "Εκπαιδευτής",
+        "venue": "Χώρος",
+        "free": "Δωρεάν",
+        "startsIn": "Έναρξη σε {{time}}",
+        "startsSoon": "ξεκινά σύντομα",
+        "inHours": "Σε {{hours}}ω {{minutes}}λ",
+        "inMinutes": "Σε {{minutes}}λ",
+        "startingSoon": "Ξεκινά σύντομα"
+    },
+    "messages": {
+        "title": "Μηνύματα",
+        "noMessages": "Δεν υπάρχουν μηνύματα",
+        "sendMessage": "Αποστολή Μηνύματος",
+        "typePlaceholder": "Πληκτρολογήστε ένα μήνυμα..."
+    },
+    "onboarding": {
+        "welcome": "Καλώς ήρθατε στο KymaClub!",
+        "letsSetup": "Ας ρυθμίσουμε το προφίλ σας",
+        "yourName": "Το Όνομά σας",
+        "namePlaceholder": "Εισάγετε το όνομά σας",
+        "skip": "Παράλειψη",
+        "finish": "Ολοκλήρωση",
+        "getStarted": "Ξεκινήστε"
+    },
+    "ticket": {
+        "title": "Εισιτήριο Κράτησης",
+        "scanQR": "Σαρώστε αυτόν τον κωδικό QR στον χώρο",
+        "bookingDetails": "Λεπτομέρειες Κράτησης",
+        "showAtVenue": "Δείξτε αυτό στον χώρο για check-in"
+    },
+    "services": {
+        "gym": "Γυμναστήριο / Fitness",
+        "pilates": "Πιλάτες",
+        "massage": "Μασάζ",
+        "dance": "Χορός",
+        "martialArts": "Πολεμικές Τέχνες",
+        "swimming": "Κολύμβηση",
+        "cycling": "Ποδηλασία",
+        "running": "Τρέξιμο",
+        "crossfit": "CrossFit",
+        "boxing": "Πυγμαχία",
+        "other": "Άλλο"
+    },
+    "accessibility": {
+        "openSettings": "Άνοιγμα ρυθμίσεων",
+        "openMenu": "Άνοιγμα μενού",
+        "closeMenu": "Κλείσιμο μενού",
+        "deleteImage": "Διαγραφή εικόνας",
+        "changePhoto": "Αλλαγή φωτογραφίας",
+        "viewImage": "Προβολή εικόνας",
+        "back": "Πίσω",
+        "filter": "Φίλτρο",
+        "search": "Αναζήτηση",
+        "refresh": "Ανανέωση",
+        "more": "Περισσότερες επιλογές"
     }
 }
