--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -23,9 +23,267 @@
         "loading": "Loading...",
         "error": "Error",
         "tryAgain": "Try Again",
-        "clearAll": "Clear all"
+        "clearAll": "Clear all",
+        "ok": "OK",
+        "yes": "Yes",
+        "no": "No",
+        "continue": "Continue",
+        "back": "Back",
+        "next": "Next",
+        "done": "Done",
+        "close": "Close",
+        "confirm": "Confirm",
+        "remove": "Remove",
+        "update": "Update",
+        "submit": "Submit",
+        "apply": "Apply",
+        "reset": "Reset",
+        "today": "Today"
+    },
+    "app": {
+        "connectionFailed": "Connection Failed",
+        "connectionFailedMessage": "Unable to connect to KymaClub servers.\n\nPlease check your internet connection and try again.",
+        "retry": "Retry"
+    },
+    "errors": {
+        "somethingWentWrong": "Something went wrong",
+        "unexpectedError": "An unexpected error occurred. We apologize for the inconvenience.",
+        "tryAgain": "Try Again",
+        "restartApp": "Restart App",
+        "showErrorDetails": "Show Error Details (Dev Mode)",
+        "imageNotApproved": "Image Not Approved",
+        "uploadFailed": "Upload Failed",
+        "failedToUploadPhoto": "Failed to upload photo. Please try again.",
+        "failedToUploadImage": "Failed to upload image. Please try again.",
+        "failedToRemoveImage": "Failed to remove profile image",
+        "uploadNewImage": "Upload New Image",
+        "noStorageId": "No storage ID returned from upload",
+        "error": "Error",
+        "unableToStartCheckout": "Unable to start checkout. Please try again later."
+    },
+    "auth": {
+        "landing": {
+            "title": "KymaClub",
+            "subtitle": "Your premium beach experience",
+            "feature1": "1. Select your credits.",
+            "feature2": "2. Choose your superpowers!",
+            "feature3": "3. Browse & Book your spot!",
+            "createAccount": "Create Account",
+            "signIn": "Sign In",
+            "footer": "Currently serving Athens and surrounding areas"
+        },
+        "signOut": "Sign Out",
+        "signOutConfirm": "Are you sure you want to sign out?",
+        "signIn": "Sign In",
+        "createAccount": "Create Account",
+        "welcomeBack": "Welcome back!",
+        "getStarted": "Let's get started"
+    },
+    "bookings": {
+        "title": "Bookings",
+        "upcoming": "Upcoming",
+        "past": "Past",
+        "noUpcomingBookings": "No upcoming bookings",
+        "noPastBookings": "No past bookings",
+        "exploreClasses": "Explore classes to book your first session!",
+        "viewClass": "View Class",
+        "viewTicket": "View Ticket",
+        "cancelBooking": "Cancel Booking",
+        "status": {
+            "confirmed": "Confirmed",
+            "checkedIn": "Checked In",
+            "attended": "Attended",
+            "waitlisted": "Waitlisted",
+            "cancelledByYou": "Cancelled by you",
+            "cancelledByStudio": "Cancelled by studio",
+            "noShow": "No Show",
+            "pending": "Pending"
+        }
+    },
+    "settings": {
+        "title": "Settings",
+        "account": {
+            "title": "Account",
+            "appSettings": "App Settings",
+            "appLanguage": "App Language",
+            "change": "Change",
+            "accountSettings": "Account Settings",
+            "accountSettingsSubtitle": "Privacy, security, data",
+            "privacySettings": "Privacy Settings",
+            "privacyDescription": "Manage your privacy preferences",
+            "dataStorage": "Data & Storage",
+            "dataDescription": "Manage your data and storage",
+            "deleteAccount": "Delete Account",
+            "deleteDescription": "Permanently delete your account",
+            "comingSoon": "Account management coming soon"
+        },
+        "language": {
+            "title": "App Language",
+            "description": "Choose your preferred language for the app interface",
+            "error": "Error",
+            "failedToChange": "Failed to change language. Please try again.",
+            "changesImmediate": "Language changes will take effect immediately"
+        },
+        "profile": {
+            "title": "Profile",
+            "profilePhoto": "Profile Photo",
+            "chooseOption": "Choose an option",
+            "takePhoto": "Take Photo",
+            "chooseFromLibrary": "Choose from Library",
+            "removePhoto": "Remove Photo",
+            "editProfile": "Edit Profile",
+            "yourProfile": "Your Profile"
+        },
+        "notifications": {
+            "title": "Notifications",
+            "description": "Manage your notification preferences",
+            "notificationsSubtitle": "Push notifications, email preferences",
+            "pushNotifications": "Push Notifications",
+            "emailNotifications": "Email Notifications",
+            "smsNotifications": "SMS Notifications"
+        },
+        "credits": {
+            "title": "Credits",
+            "yourBalance": "Your Balance",
+            "buyCredits": "Buy Credits",
+            "creditsExpiring": "Credits Expiring",
+            "viewHistory": "View History"
+        },
+        "subscription": {
+            "title": "Subscription",
+            "active": "Active",
+            "inactive": "No active subscription",
+            "manage": "Manage Subscription",
+            "cancel": "Cancel Subscription",
+            "startSubscription": "Start a subscription"
+        },
+        "statistics": {
+            "totalBookings": "Total Bookings",
+            "completedClasses": "Completed Classes",
+            "memberSince": "Member Since"
+        }
+    },
+    "subscription": {
+        "title": "Subscription",
+        "monthly": "Monthly",
+        "monthlySubscription": "Monthly Subscription",
+        "chooseYourPlan": "Choose Your Plan",
+        "whySubscribe": "Why subscribe?",
+        "benefits": "• Save 5-10% compared to one-time purchases\n• Credits are added to your account each month\n• Use credits to book classes at any partner studio\n• Unused credits roll over for up to 3 months\n• Cancel anytime - no commitment required",
+        "selectPlan": "Select Plan",
+        "subscribe": "Subscribe",
+        "cancelSubscription": "Cancel Subscription",
+        "currentPlan": "Current Plan",
+        "noPlan": "No active subscription",
+        "perMonth": "per month",
+        "billedMonthly": "Billed monthly",
+        "cancelAnytime": "Cancel anytime",
+        "updateSubscription": "Update Subscription",
+        "startSubscription": "Start Subscription",
+        "reactivateSubscription": "Reactivate Subscription",
+        "updatePlan": "Update Plan",
+        "startAndPay": "Start & Pay",
+        "updating": "Updating...",
+        "starting": "Starting...",
+        "keepSubscription": "Keep Subscription",
+        "subscriptionUpdated": "Subscription Updated!",
+        "subscriptionCancelled": "Subscription Cancelled",
+        "subscriptionReactivated": "Subscription Reactivated!",
+        "cancelSuccess": "Your subscription will end at the end of your current billing period.",
+        "reenable": "Re-enable",
+        "errorUpdate": "Failed to update subscription. {{message}}",
+        "errorStart": "Failed to start subscription. {{message}}",
+        "errorCancel": "Failed to cancel subscription. Please try again.",
+        "errorReactivate": "Failed to reactivate subscription. {{message}}",
+        "update": "Update",
+        "active": "Active",
+        "canceling": "Canceling",
+        "endsOn": "Ends {{date}}",
+        "renewsOn": "Renews {{date}}",
+        "currentSubscription": "Current Subscription",
+        "savingsUpTo": "Save up to {{discount}}%",
+        "updateConfirm": "Update to {{credits}} credits/month for {{price}}/month?\n\nChanges will take effect on {{date}}. No charge now.",
+        "startConfirm": "Start subscription with {{credits}} credits/month for {{price}}/month?\n\nYou'll be charged now and receive {{credits}} credits immediately.",
+        "cancelConfirm": "Are you sure you want to cancel your subscription? You'll continue to have access until the end of your current billing period.",
+        "reactivateExpiredConfirm": "Start new subscription with {{credits}} credits/month for {{price}}/month?\n\nYou'll be charged {{price}} now and receive {{credits}} credits immediately.",
+        "reactivateActiveConfirm": "Re-enable subscription with {{credits}} credits/month?\n\nNo charge now. Your subscription will continue and charge {{price}} on {{date}}.",
+        "creditsPerMonth": "{{credits}} credits/month",
+        "nextBilling": "Next billing: {{date}}",
+        "savePercent": "Save {{discount}}%",
+        "standardRate": "Standard rate",
+        "paused": "Paused",
+        "inactive": "Inactive",
+        "resume": "Resume"
+    },
+    "credits": {
+        "title": "Credits",
+        "balance": "Balance",
+        "history": "Credit History",
+        "noHistory": "No credit history",
+        "buyCredits": "Buy Credits",
+        "manageCredits": "Manage Credits",
+        "buyNow": "Buy now",
+        "processing": "Processing...",
+        "topUpCredits": "Top-up your credits balance instantly",
+        "creditsValid": "Credits are valid for 3 months after issuing. Best for occasional bookings.",
+        "quickBuy": "Quick buy",
+        "quickBuySubtitle": "Instantly get an amount of credits",
+        "buyCreditsButton": "Buy credits",
+        "oneTimePurchase": "One-time Purchase",
+        "selectAmount": "Select Amount",
+        "creditsAmount": "{{credits}} credits",
+        "purchase": "Purchase",
+        "expiresIn": "Expires in {{days}} days",
+        "expired": "Expired",
+        "purchaseDescription": "Purchase credits if you're running low or don't want to start a subscription. Credits will expire 90 days after purchase.",
+        "currentBalance": "Current Balance",
+        "creditsAvailable": "credits available",
+        "availableCreditPacks": "Available Credit Packs",
+        "choosePackMessage": "Choose the pack that fits your needs",
+        "purchaseCredits": "Purchase Credits",
+        "purchaseConfirm": "Purchase {{credits}} credits for {{price}}?",
+        "errorPurchase": "Failed to start purchase. Please try again.",
+        "recommended": "Recommended",
+        "perCredit": "per credit",
+        "savePercent": "Save {{discount}}%",
+        "standardRate": "Standard rate"
+    },
+    "classes": {
+        "title": "Classes",
+        "classDetails": "Class Details",
+        "instructor": "Instructor",
+        "duration": "Duration",
+        "capacity": "Capacity",
+        "price": "Price",
+        "book": "Book",
+        "bookNow": "Book Now",
+        "fullyBooked": "Fully Booked",
+        "joinWaitlist": "Join Waitlist",
+        "removeFromWaitlist": "Remove from Waitlist",
+        "alreadyBooked": "Already Booked",
+        "bookingWindow": "Booking Window",
+        "opensAt": "Opens {{time}}",
+        "closesAt": "Closes {{time}}",
+        "noClasses": "No classes available",
+        "upcomingClasses": "Upcoming Classes",
+        "about": "About this class",
+        "whatToBring": "What to bring",
+        "cancellationPolicy": "Cancellation Policy"
+    },
+    "venues": {
+        "title": "Venues",
+        "venueDetails": "Venue Details",
+        "location": "Location",
+        "amenities": "Amenities",
+        "description": "Description",
+        "classes": "Classes",
+        "reviews": "Reviews",
+        "noVenues": "No venues found",
+        "viewSchedule": "View Schedule",
+        "getDirections": "Get Directions"
     },
     "explore": {
+        "title": "Explore",
         "businesses": "Businesses",
         "classes": "Classes",
         "nearYou": "Near You",
@@ -37,14 +295,21 @@
         "closedNow": "Closed Now",
         "rating": "{{rating}} stars",
         "reviews": "{{count}} reviews",
+        "review": "{{count}} review",
         "startsAt": "Starts at {{price}}",
         "duration": "{{minutes}} min",
         "spotsLeft": "{{count}} spots left",
+        "spotLeft": "{{count}} spot left",
         "soldOut": "Sold Out",
         "bookingsDisabled": "Bookings Disabled",
         "registrationsClosed": "Registrations Closed",
         "bookingsNotYetOpen": "Bookings Not Yet Open",
         "bookingsClosed": "Bookings Closed",
+        "closesIn": "Closes in {{time}}",
+        "opensIn": "Opens in {{time}}",
+        "timeUnitDays": "d",
+        "timeUnitHours": "h",
+        "timeUnitMinutes": "m",
         "noBusinesses": "No businesses found nearby",
         "noClasses": "No classes found",
         "searchPlaceholder": "Search businesses or classes...",
@@ -52,6 +317,135 @@
         "applyFilters": "Apply filters ({{count}})",
         "applyFiltersNoCount": "Apply filters",
         "distanceWithin": "Within {{distance}} km",
-        "distanceAny": "Any distance"
+        "distanceAny": "Any distance",
+        "allCategories": "All Categories",
+        "clearFilters": "Clear Filters"
+    },
+    "reviews": {
+        "title": "Reviews",
+        "writeReview": "Write a Review",
+        "yourReview": "Your Review",
+        "rating": "Rating",
+        "tapToRate": "Tap to rate",
+        "comment": "Comment",
+        "commentPlaceholder": "What did you like about this venue? What could be improved?",
+        "tellUsExperience": "Tell us about your experience (optional)",
+        "characterCount": "{{current}}/{{max}}",
+        "guidelines": "Review Guidelines",
+        "guidelinesText": "• Be honest and helpful to other users\n• Focus on your experience at the venue\n• Keep it respectful and constructive\n• Avoid personal attacks or inappropriate content",
+        "submitReview": "Submit Review",
+        "submitting": "Submitting...",
+        "thankYou": "Thank you for your review!",
+        "noReviews": "No reviews yet",
+        "beTheFirst": "Be the first to review!",
+        "helpful": "Helpful",
+        "notHelpful": "Not helpful",
+        "readMore": "Read more",
+        "readLess": "Read less"
+    },
+    "map": {
+        "title": "Map",
+        "myLocation": "My Location",
+        "searchThisArea": "Search this area",
+        "nearbyClasses": "Nearby Classes"
+    },
+    "profile": {
+        "title": "Profile",
+        "editProfile": "Edit Profile",
+        "yourName": "Your Name",
+        "email": "Email",
+        "phone": "Phone",
+        "preferences": "Preferences",
+        "statistics": "Statistics",
+        "totalBookings": "Total Bookings",
+        "completedClasses": "Completed Classes",
+        "memberSince": "Member Since"
+    },
+    "payment": {
+        "success": "Payment Successful!",
+        "successMessage": "Your payment has been processed successfully.",
+        "cancelled": "Payment Cancelled",
+        "cancelledMessage": "Your payment was cancelled.",
+        "returnToApp": "Return to App",
+        "viewCredits": "View Credits",
+        "viewSubscription": "View Subscription"
+    },
+    "news": {
+        "title": "News",
+        "updates": "Updates",
+        "noNews": "No news available",
+        "readMore": "Read more",
+        "loading": "Loading news...",
+        "welcomeBanner": {
+            "title": "Welcome aboard! 🎉",
+            "subtitle": "We are excited to have you! We've added 10 credits to your account to get you started. Look around, browse the different businesses and book any class you like!",
+            "exploreButton": "Explore"
+        },
+        "noUpcomingClasses": {
+            "title": "You have no upcoming classes",
+            "exploreButton": "explore here"
+        },
+        "yourSchedule": "Your Schedule",
+        "happeningToday": "Happening Today",
+        "bestOffers": "Best Offers",
+        "newStudios": "New studios",
+        "withInstructor": "with {{instructor}}",
+        "tomorrow": "Tomorrow",
+        "class": "Class",
+        "instructor": "Instructor",
+        "venue": "Venue",
+        "free": "Free",
+        "startsIn": "starts in {{time}}",
+        "startsSoon": "starts soon",
+        "inHours": "In {{hours}}h {{minutes}}m",
+        "inMinutes": "In {{minutes}}m",
+        "startingSoon": "Starting soon"
+    },
+    "messages": {
+        "title": "Messages",
+        "noMessages": "No messages",
+        "sendMessage": "Send Message",
+        "typePlaceholder": "Type a message..."
+    },
+    "onboarding": {
+        "welcome": "Welcome to KymaClub!",
+        "letsSetup": "Let's set up your profile",
+        "yourName": "Your Name",
+        "namePlaceholder": "Enter your name",
+        "skip": "Skip",
+        "finish": "Finish",
+        "getStarted": "Get Started"
+    },
+    "ticket": {
+        "title": "Booking Ticket",
+        "scanQR": "Scan this QR code at the venue",
+        "bookingDetails": "Booking Details",
+        "showAtVenue": "Show this at the venue for check-in"
+    },
+    "services": {
+        "gym": "Gym / Fitness",
+        "pilates": "Pilates",
+        "massage": "Massage",
+        "dance": "Dance",
+        "martialArts": "Martial Arts",
+        "swimming": "Swimming",
+        "cycling": "Cycling",
+        "running": "Running",
+        "crossfit": "CrossFit",
+        "boxing": "Boxing",
+        "other": "Other"
+    },
+    "accessibility": {
+        "openSettings": "Open settings",
+        "openMenu": "Open menu",
+        "closeMenu": "Close menu",
+        "deleteImage": "Delete image",
+        "changePhoto": "Change photo",
+        "viewImage": "View image",
+        "back": "Go back",
+        "filter": "Filter",
+        "search": "Search",
+        "refresh": "Refresh",
+        "more": "More options"
     }
 }
