--- a/apps/mobile-consumer/src/locales/lt/translation.json
+++ b/apps/mobile-consumer/src/locales/lt/translation.json
@@ -8,7 +8,7 @@
         "home": "Pradžia",
         "profile": "Profilis",
         "settings": "Nustatymai",
-        "notFound": "Nieko nerasta",
+        "notFound": "Nerasta",
         "bookings": "Rezervacijos",
         "map": "Žemėlapis",
         "explore": "Tyrinėti",
@@ -23,35 +23,429 @@
         "loading": "Kraunama...",
         "error": "Klaida",
         "tryAgain": "Bandyti dar kartą",
-        "clearAll": "Išvalyti viską"
+        "clearAll": "Išvalyti viską",
+        "ok": "Gerai",
+        "yes": "Taip",
+        "no": "Ne",
+        "continue": "Tęsti",
+        "back": "Atgal",
+        "next": "Kitas",
+        "done": "Atlikta",
+        "close": "Uždaryti",
+        "confirm": "Patvirtinti",
+        "remove": "Pašalinti",
+        "update": "Atnaujinti",
+        "submit": "Pateikti",
+        "apply": "Taikyti",
+        "reset": "Atstatyti",
+        "today": "Šiandien"
+    },
+    "app": {
+        "connectionFailed": "Ryšio Klaida",
+        "connectionFailedMessage": "Nepavyksta prisijungti prie KymaClub serverių.\n\nPatikrinkite savo interneto ryšį ir bandykite dar kartą.",
+        "retry": "Bandyti dar kartą"
+    },
+    "errors": {
+        "somethingWentWrong": "Kažkas nutiko ne taip",
+        "unexpectedError": "Įvyko netikėta klaida. Atsiprašome už nepatogumus.",
+        "tryAgain": "Bandyti Dar Kartą",
+        "restartApp": "Paleisti Programą iš Naujo",
+        "showErrorDetails": "Rodyti Klaidos Detales (Kūrėjo Režimas)",
+        "imageNotApproved": "Paveikslas Nepatvirtintas",
+        "uploadFailed": "Įkėlimas Nepavyko",
+        "failedToUploadPhoto": "Nepavyko įkelti nuotraukos. Bandykite dar kartą.",
+        "failedToUploadImage": "Nepavyko įkelti paveikslėlio. Bandykite dar kartą.",
+        "failedToRemoveImage": "Nepavyko pašalinti profilio paveikslėlio",
+        "uploadNewImage": "Įkelti Naują Paveikslėlį",
+        "noStorageId": "Iš įkėlimo negrąžintas saugyklos identifikatorius",
+        "error": "Klaida",
+        "unableToStartCheckout": "Nepavyko pradėti apmokėjimo. Bandykite dar kartą vėliau."
+    },
+    "auth": {
+        "landing": {
+            "title": "KymaClub",
+            "subtitle": "Jūsų premium paplūdimio patirtis",
+            "feature1": "1. Pasirinkite savo kreditus.",
+            "feature2": "2. Pasirinkite savo superįgūdžius!",
+            "feature3": "3. Naršykite ir Užsisakykite savo vietą!",
+            "createAccount": "Sukurti Paskyrą",
+            "signIn": "Prisijungti",
+            "footer": "Šiuo metu aptarnaujame Atėnus ir aplinkinius rajonus"
+        },
+        "signOut": "Atsijungti",
+        "signOutConfirm": "Ar tikrai norite atsijungti?",
+        "signIn": "Prisijungti",
+        "createAccount": "Sukurti Paskyrą",
+        "welcomeBack": "Sveiki sugrįžę!",
+        "getStarted": "Pradėkime"
+    },
+    "bookings": {
+        "title": "Rezervacijos",
+        "upcoming": "Būsimos",
+        "past": "Praėję",
+        "noUpcomingBookings": "Nėra būsimų rezervacijų",
+        "noPastBookings": "Nėra praėjusių rezervacijų",
+        "exploreClasses": "Naršykite pamokas, kad užsisakytumėte savo pirmąjį seansą!",
+        "viewClass": "Peržiūrėti Pamoką",
+        "viewTicket": "Peržiūrėti Bilietą",
+        "cancelBooking": "Atšaukti Rezervaciją",
+        "status": {
+            "confirmed": "Patvirtinta",
+            "checkedIn": "Registruota",
+            "attended": "Dalyvavo",
+            "waitlisted": "Laukiamajame Sąraše",
+            "cancelledByYou": "Atšaukta jūsų",
+            "cancelledByStudio": "Atšaukta studijos",
+            "noShow": "Neatvyko",
+            "pending": "Laukiama"
+        }
+    },
+    "settings": {
+        "title": "Nustatymai",
+        "account": {
+            "title": "Paskyra",
+            "appSettings": "Programos Nustatymai",
+            "appLanguage": "Programos Kalba",
+            "change": "Keisti",
+            "accountSettings": "Paskyros Nustatymai",
+            "accountSettingsSubtitle": "Privatumas, saugumas, duomenys",
+            "privacySettings": "Privatumo Nustatymai",
+            "privacyDescription": "Tvarkykite savo privatumo nuostatas",
+            "dataStorage": "Duomenys ir Saugykla",
+            "dataDescription": "Tvarkykite savo duomenis ir saugyklą",
+            "deleteAccount": "Ištrinti Paskyrą",
+            "deleteDescription": "Visam laikui ištrinti savo paskyrą",
+            "comingSoon": "Paskyros valdymas greitai"
+        },
+        "language": {
+            "title": "Programos Kalba",
+            "description": "Pasirinkite pageidaujamą kalbą programos sąsajai",
+            "error": "Klaida",
+            "failedToChange": "Nepavyko pakeisti kalbos. Bandykite dar kartą.",
+            "changesImmediate": "Kalbos pakeitimai bus taikomi nedelsiant"
+        },
+        "profile": {
+            "title": "Profilis",
+            "profilePhoto": "Profilio Nuotrauka",
+            "chooseOption": "Pasirinkite parinktį",
+            "takePhoto": "Padaryti Nuotrauką",
+            "chooseFromLibrary": "Pasirinkti iš Bibliotekos",
+            "removePhoto": "Pašalinti Nuotrauką",
+            "editProfile": "Redaguoti Profilį",
+            "yourProfile": "Jūsų Profilis"
+        },
+        "notifications": {
+            "title": "Pranešimai",
+            "description": "Tvarkykite savo pranešimų nuostatas",
+            "notificationsSubtitle": "Push pranešimai, el. pašto nustatymai",
+            "pushNotifications": "Push Pranešimai",
+            "emailNotifications": "El. pašto Pranešimai",
+            "smsNotifications": "SMS Pranešimai"
+        },
+        "credits": {
+            "title": "Kreditai",
+            "yourBalance": "Jūsų Likutis",
+            "buyCredits": "Pirkti Kreditus",
+            "creditsExpiring": "Kreditai Baigiasi",
+            "viewHistory": "Peržiūrėti Istoriją"
+        },
+        "subscription": {
+            "title": "Prenumerata",
+            "active": "Aktyvi",
+            "inactive": "Nėra aktyvios prenumeratos",
+            "manage": "Valdyti Prenumeratą",
+            "cancel": "Atšaukti Prenumeratą",
+            "startSubscription": "Pradėti prenumeratą"
+        },
+        "statistics": {
+            "totalBookings": "Visos Rezervacijos",
+            "completedClasses": "Užbaigtos Pamokos",
+            "memberSince": "Narys nuo"
+        }
+    },
+    "subscription": {
+        "title": "Prenumerata",
+        "monthly": "Mėnesinis",
+        "monthlySubscription": "Mėnesinė Prenumerata",
+        "chooseYourPlan": "Pasirinkite Savo Planą",
+        "whySubscribe": "Kodėl prenumeruoti?",
+        "benefits": "• Sutaupykite 5-10%, palyginti su vienkartiniais pirkimais\n• Kreditai įtraukiami į jūsų paskyrą kas mėnesį\n• Naudokite kreditus pamokų rezervacijoms bet kurioje partnerių studijoje\n• Nepanaudoti kreditai perkeliami iki 3 mėnesių\n• Atšaukite bet kada - nereikia įsipareigojimų",
+        "selectPlan": "Pasirinkti Planą",
+        "subscribe": "Prenumeruoti",
+        "cancelSubscription": "Atšaukti Prenumeratą",
+        "currentPlan": "Dabartinis Planas",
+        "noPlan": "Nėra aktyvios prenumeratos",
+        "perMonth": "per mėnesį",
+        "billedMonthly": "Mokama kas mėnesį",
+        "cancelAnytime": "Atšaukite bet kada",
+        "updateSubscription": "Atnaujinti Prenumeratą",
+        "startSubscription": "Pradėti Prenumeratą",
+        "reactivateSubscription": "Suaktyvinti Prenumeratą",
+        "updatePlan": "Atnaujinti Planą",
+        "startAndPay": "Pradėti ir Mokėti",
+        "updating": "Atnaujinama...",
+        "starting": "Pradedama...",
+        "keepSubscription": "Palikti Prenumeratą",
+        "subscriptionUpdated": "Prenumerata Atnaujinta!",
+        "subscriptionCancelled": "Prenumerata Atšaukta",
+        "subscriptionReactivated": "Prenumerata Suaktyvinta!",
+        "cancelSuccess": "Jūsų prenumerata baigs galioti dabartinio apmokestinimo laikotarpio pabaigoje.",
+        "reenable": "Suaktyvinti",
+        "errorUpdate": "Nepavyko atnaujinti prenumeratos. {{message}}",
+        "errorStart": "Nepavyko pradėti prenumeratos. {{message}}",
+        "errorCancel": "Nepavyko atšaukti prenumeratos. Bandykite dar kartą.",
+        "errorReactivate": "Nepavyko suaktyvinti prenumeratos. {{message}}",
+        "update": "Atnaujinti",
+        "active": "Aktyvi",
+        "canceling": "Atšaukiama",
+        "endsOn": "Baigiasi {{date}}",
+        "renewsOn": "Atnaujinama {{date}}",
+        "currentSubscription": "Dabartinė Prenumerata",
+        "savingsUpTo": "Sutaupykite iki {{discount}}%",
+        "updateConfirm": "Atnaujinti į {{credits}} kreditų/mėn. už {{price}}/mėn.?\n\nPakeitimai įsigalios {{date}}. Mokestis nebus imamas dabar.",
+        "startConfirm": "Pradėti prenumeratą su {{credits}} kreditų/mėn. už {{price}}/mėn.?\n\nJūs būsite apmokestinti dabar ir gausite {{credits}} kreditų iš karto.",
+        "cancelConfirm": "Ar tikrai norite atšaukti savo prenumeratą? Galėsite naudotis paslauga iki dabartinio apmokestinimo laikotarpio pabaigos.",
+        "reactivateExpiredConfirm": "Pradėti naują prenumeratą su {{credits}} kreditų/mėn. už {{price}}/mėn.?\n\nJūs būsite apmokestinti {{price}} dabar ir gausite {{credits}} kreditų iš karto.",
+        "reactivateActiveConfirm": "Suaktyvinti prenumeratą su {{credits}} kreditų/mėn.?\n\nMokestis nebus imamas dabar. Jūsų prenumerata tęsis ir mokestis bus imamas {{price}} {{date}}.",
+        "creditsPerMonth": "{{credits}} kreditų/mėn.",
+        "nextBilling": "Kitas mokestis: {{date}}",
+        "savePercent": "Sutaupyti {{discount}}%",
+        "standardRate": "Standartinė kaina",
+        "paused": "Pristabdyta",
+        "inactive": "Neaktyvi",
+        "resume": "Tęsti"
+    },
+    "credits": {
+        "title": "Kreditai",
+        "balance": "Likutis",
+        "history": "Kreditų Istorija",
+        "noHistory": "Nėra kreditų istorijos",
+        "buyCredits": "Pirkti Kreditus",
+        "manageCredits": "Tvarkyti Kreditus",
+        "buyNow": "Pirkti dabar",
+        "processing": "Apdorojama...",
+        "topUpCredits": "Papildykite savo kreditų likutį akimirksniu",
+        "creditsValid": "Kreditai galioja 3 mėnesius po išdavimo. Tinkama taisyklingoms rezervacijoms.",
+        "quickBuy": "Greitas pirkimas",
+        "quickBuySubtitle": "Gaukite kreditus akimirksniu",
+        "buyCreditsButton": "Pirkti kreditus",
+        "oneTimePurchase": "Vienkartinis Pirkimas",
+        "selectAmount": "Pasirinkti Sumą",
+        "creditsAmount": "{{credits}} kreditų",
+        "purchase": "Pirkti",
+        "expiresIn": "Baigiasi po {{days}} dienų",
+        "expired": "Pasibaigęs",
+        "purchaseDescription": "Pirkite kreditus, jei jų trūksta arba nenorite pradėti prenumeratos. Kreditai baigs galioti po 90 dienų nuo pirkimo.",
+        "currentBalance": "Dabartinis Likutis",
+        "creditsAvailable": "kreditų galima",
+        "availableCreditPacks": "Galimi Kreditų Paketai",
+        "choosePackMessage": "Pasirinkite paketą, kuris atitinka jūsų poreikius",
+        "purchaseCredits": "Pirkti Kreditus",
+        "purchaseConfirm": "Pirkti {{credits}} kreditų už {{price}}?",
+        "errorPurchase": "Nepavyko pradėti pirkimo. Bandykite dar kartą.",
+        "recommended": "Rekomenduojama",
+        "perCredit": "už kreditą",
+        "savePercent": "Sutaupyti {{discount}}%",
+        "standardRate": "Standartinė kaina"
+    },
+    "classes": {
+        "title": "Pamokos",
+        "classDetails": "Pamokos Detalės",
+        "instructor": "Instruktorius",
+        "duration": "Trukmė",
+        "capacity": "Talpa",
+        "price": "Kaina",
+        "book": "Užsisakyti",
+        "bookNow": "Užsisakyti Dabar",
+        "fullyBooked": "Visiškai Užimta",
+        "joinWaitlist": "Prisijungti prie Laukiamojo Sąrašo",
+        "removeFromWaitlist": "Pašalinti iš Laukiamojo Sąrašo",
+        "alreadyBooked": "Jau Užsakyta",
+        "bookingWindow": "Rezervacijos Langas",
+        "opensAt": "Atidaro {{time}}",
+        "closesAt": "Uždaro {{time}}",
+        "noClasses": "Nėra prieinamų pamokų",
+        "upcomingClasses": "Būsimos Pamokos",
+        "about": "Apie šią pamoką",
+        "whatToBring": "Ką atsivežti",
+        "cancellationPolicy": "Atšaukimo Politika"
+    },
+    "venues": {
+        "title": "Vietos",
+        "venueDetails": "Vietos Detalės",
+        "location": "Vieta",
+        "amenities": "Patogumai",
+        "description": "Aprašymas",
+        "classes": "Pamokos",
+        "reviews": "Atsiliepimai",
+        "noVenues": "Nerasta vietų",
+        "viewSchedule": "Peržiūrėti Tvarkaraštį",
+        "getDirections": "Gauti Nuorodas"
     },
     "explore": {
+        "title": "Tyrinėti",
         "businesses": "Verslas",
         "classes": "Pamokos",
         "nearYou": "Šalia jūsų",
         "filters": "Filtrai",
-        "showMap": "Rodyti žemėlapį",
-        "showList": "Rodyti sąrašą",
+        "showMap": "Rodyti Žemėlapį",
+        "showList": "Rodyti Sąrašą",
         "distance": "Atstumas",
         "openNow": "Atidaryta dabar",
         "closedNow": "Uždaryta dabar",
         "rating": "{{rating}} žvaigždutės",
-        "reviews": "{{count}} atžymų",
+        "reviews": "{{count}} atsiliepimų",
+        "review": "{{count}} atsiliepimas",
         "startsAt": "Pradeda nuo {{price}}",
         "duration": "{{minutes}} min",
         "spotsLeft": "{{count}} vietų liko",
+        "spotLeft": "{{count}} vieta liko",
         "soldOut": "Išparduota",
-        "bookingsDisabled": "Rezervacijos išjungtos",
-        "registrationsClosed": "Registracijos uždarytos",
-        "bookingsNotYetOpen": "Rezervacijos dar neatidarytos",
-        "bookingsClosed": "Rezervacijos uždarytos",
-        "noBusinesses": "Šalia nerastas verslas",
+        "bookingsDisabled": "Rezervacijos Išjungtos",
+        "registrationsClosed": "Registracijos Uždarytos",
+        "bookingsNotYetOpen": "Rezervacijos Dar Neatidarytos",
+        "bookingsClosed": "Rezervacijos Uždarytos",
+        "closesIn": "Užsidaro po {{time}}",
+        "opensIn": "Atidaroma po {{time}}",
+        "timeUnitDays": "d",
+        "timeUnitHours": "val",
+        "timeUnitMinutes": "min",
+        "noBusinesses": "Šalia nerasta verslo",
         "noClasses": "Nerastos pamokos",
         "searchPlaceholder": "Ieškoti verslo ar pamokų...",
         "categories": "Kategorijos",
         "applyFilters": "Taikyti filtrus ({{count}})",
         "applyFiltersNoCount": "Taikyti filtrus",
         "distanceWithin": "Iki {{distance}} km",
-        "distanceAny": "Bet koks atstumas"
+        "distanceAny": "Bet koks atstumas",
+        "allCategories": "Visos Kategorijos",
+        "clearFilters": "Išvalyti Filtrus"
+    },
+    "reviews": {
+        "title": "Atsiliepimai",
+        "writeReview": "Rašyti Atsiliepimą",
+        "yourReview": "Jūsų Atsiliepimas",
+        "rating": "Įvertinimas",
+        "tapToRate": "Bakstelėkite, kad įvertintumėte",
+        "comment": "Komentaras",
+        "commentPlaceholder": "Kas jums patiko šioje vietoje? Ką būtų galima pagerinti?",
+        "tellUsExperience": "Papasakokite apie savo patirtį (nebūtina)",
+        "characterCount": "{{current}}/{{max}}",
+        "guidelines": "Atsiliepimų Gairės",
+        "guidelinesText": "• Būkite sąžiningi ir naudingi kitiems vartotojams\n• Sutelkite dėmesį į savo patirtį vietoje\n• Būkite pagarbus ir konstruktyvūs\n• Venkite asmeninių atakų ar netinkamo turinio",
+        "submitReview": "Pateikti Atsiliepimą",
+        "submitting": "Pateikiama...",
+        "thankYou": "Dėkojame už jūsų atsiliepimą!",
+        "noReviews": "Dar nėra atsiliepimų",
+        "beTheFirst": "Būkite pirmas, kuris įvertins!",
+        "helpful": "Naudinga",
+        "notHelpful": "Nenaudinga",
+        "readMore": "Skaityti daugiau",
+        "readLess": "Skaityti mažiau"
+    },
+    "map": {
+        "title": "Žemėlapis",
+        "myLocation": "Mano Vieta",
+        "searchThisArea": "Ieškoti šioje srityje",
+        "nearbyClasses": "Netoliese Esančios Pamokos"
+    },
+    "profile": {
+        "title": "Profilis",
+        "editProfile": "Redaguoti Profilį",
+        "yourName": "Jūsų Vardas",
+        "email": "El. paštas",
+        "phone": "Telefonas",
+        "preferences": "Nuostatos",
+        "statistics": "Statistika",
+        "totalBookings": "Visos Rezervacijos",
+        "completedClasses": "Užbaigtos Pamokos",
+        "memberSince": "Narys nuo"
+    },
+    "payment": {
+        "success": "Mokėjimas Sėkmingas!",
+        "successMessage": "Jūsų mokėjimas buvo sėkmingai apdorotas.",
+        "cancelled": "Mokėjimas Atšauktas",
+        "cancelledMessage": "Jūsų mokėjimas buvo atšauktas.",
+        "returnToApp": "Grįžti į Programą",
+        "viewCredits": "Peržiūrėti Kreditus",
+        "viewSubscription": "Peržiūrėti Prenumeratą"
+    },
+    "news": {
+        "title": "Naujienos",
+        "updates": "Atnaujinimai",
+        "noNews": "Nėra naujienų",
+        "readMore": "Skaityti daugiau",
+        "loading": "Įkeliamos naujienos...",
+        "welcomeBanner": {
+            "title": "Sveiki atvykę! 🎉",
+            "subtitle": "Džiaugiamės, kad esate su mumis! Pridėjome 10 kreditų į jūsų sąskaitą, kad galėtumėte pradėti. Apžiūrėkite, naršykite tarp skirtingų verslų ir užsisakykite bet kokią pamoką, kuri jums patinka!",
+            "exploreButton": "Naršyti"
+        },
+        "noUpcomingClasses": {
+            "title": "Jūs neturite būsimų pamokų",
+            "exploreButton": "naršykite čia"
+        },
+        "yourSchedule": "Jūsų Tvarkaraštis",
+        "happeningToday": "Šiandien Vyksta",
+        "bestOffers": "Geriausios Pasiūlymai",
+        "newStudios": "Nauji studijos",
+        "withInstructor": "su {{instructor}}",
+        "tomorrow": "Rytoj",
+        "class": "Pamoka",
+        "instructor": "Instruktorius",
+        "venue": "Vieta",
+        "free": "Nemokamai",
+        "startsIn": "prasideda po {{time}}",
+        "startsSoon": "prasideda netrukus",
+        "inHours": "Po {{hours}}val {{minutes}}min",
+        "inMinutes": "Po {{minutes}}min",
+        "startingSoon": "Prasideda netrukus"
+    },
+    "messages": {
+        "title": "Žinutės",
+        "noMessages": "Nėra žinučių",
+        "sendMessage": "Siųsti Žinutę",
+        "typePlaceholder": "Rašykite žinutę..."
+    },
+    "onboarding": {
+        "welcome": "Sveiki atvykę į KymaClub!",
+        "letsSetup": "Sukurkime jūsų profilį",
+        "yourName": "Jūsų Vardas",
+        "namePlaceholder": "Įveskite savo vardą",
+        "skip": "Praleisti",
+        "finish": "Baigti",
+        "getStarted": "Pradėti"
+    },
+    "ticket": {
+        "title": "Rezervacijos Bilietas",
+        "scanQR": "Nuskaitykite šį QR kodą vietoje",
+        "bookingDetails": "Rezervacijos Detalės",
+        "showAtVenue": "Parodykite tai vietoje registracijai"
+    },
+    "services": {
+        "gym": "Sporto salė / Fitnesas",
+        "pilates": "Pilates",
+        "massage": "Masažas",
+        "dance": "Šokis",
+        "martialArts": "Kovos Menai",
+        "swimming": "Plaukimas",
+        "cycling": "Dviračių Sportas",
+        "running": "Bėgimas",
+        "crossfit": "CrossFit",
+        "boxing": "Boksas",
+        "other": "Kita"
+    },
+    "accessibility": {
+        "openSettings": "Atidaryti nustatymus",
+        "openMenu": "Atidaryti meniu",
+        "closeMenu": "Uždaryti meniu",
+        "deleteImage": "Ištrinti paveikslėlį",
+        "changePhoto": "Keisti nuotrauką",
+        "viewImage": "Peržiūrėti paveikslėlį",
+        "back": "Grįžti",
+        "filter": "Filtras",
+        "search": "Ieškoti",
+        "refresh": "Atnaujinti",
+        "more": "Daugiau parinkčių"
     }
 }
